recallable/tests/ui/derive_fail_serde_attr_on_skip.rs
use recallable::Recallable;

#[derive(Clone, serde::Serialize, Recallable)]
struct Foo {
    #[recallable(skip, rename = "x")]
    value: i32,
}

fn main() {}
